fix: btn-solid text color for dark mode (#2471)

--- a/styles/vars.css
+++ b/styles/vars.css
@@ -23,7 +23,6 @@
   --c-bg-btn-disabled: #a1a1a1;
   --c-text-btn-disabled: #fff;
   --c-text-btn-disabled-deeper: #a1a1a1;
-  --c-text-btn: #fff;
 
   --c-success: #67C23A;
   --c-warning: #E6A23C;
